# fnt

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  fnt.c  fnt.h  fnt_problems.h  fnt_util.h  fnt_vect.h  libfnt_config.h  libfnt_config.h.in
src/methods/: CMakeLists.txt  bisection.c  brent-dekker.c  brents-localmin.c  de.c  example.c  gradient-estimate.c  nelder-mead.c  newton-raphson.c  secant.c  simpson.c  stubs.c  trapezoidal.c
src/tests/: CMakeLists.txt  bisection_test.c  brent-dekker_test.c  brents-localmin_test.c  de_test.c  example_test.c  gradient-estimate_test.c  nelder-mead_test.c  newton-raphson_test.c  secant_test.c  simpson_test.c  trapezoidal_test.c
